# backend/docs/swagger.json
@@ -4,6 +4,78 @@
         "contact": {}
     },
     "paths": {
+        "/auth/documents": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Returns all user documents in json format",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "documents"
+                ],
+                "summary": "Get all documents",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Document"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/documents/add": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "documents"
+                ],
+                "summary": "Add one document",
+                "parameters": [
+                    {
+                        "description": "document body",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.DocumentCreation"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/controllers.APIResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/auth/drugs": {
             "get": {
                 "security": [
@@ -178,6 +250,31 @@
                 }
             }
         },
+        "controllers.DocumentCreation": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string",
+                    "example": "2025-07-12T23:45:00Z"
+                },
+                "doctor": {
+                    "type": "string"
+                },
+                "file_data": {
+                    "description": "base64-encoded in JSON",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
         "controllers.DrugCreation": {
             "type": "object",
             "properties": {
@@ -213,6 +310,35 @@
                 "password": {
                     "type": "string",
                     "example": "Aspirin"
+                }
+            }
+        },
+        "models.Document": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "doctor": {
+                    "type": "string"
+                },
+                "fileData": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "userID": {
+                    "type": "integer"
                 }
             }
         },
