# backend/handlers/router.go
@@ -22,6 +22,7 @@ func AddRoutes(r *mux.Router, service *services.DBService) {
 	userService := controllers.UserService{DB: service.UserDB, CardService: &medCardService}
 	chatService := controllers.ChatService{DB: service.ChatDB, UserService: &userService}
 	drugsService := controllers.DrugService{DB: service.DrugDB, UserService: &userService}
+	documentsService := controllers.DocumentService{DB: service.DocsDB, UserService: &userService}
 
 	r.HandleFunc("/", HomePage).Methods("GET")
 	r.HandleFunc("/signup", userService.SignUp).Methods("POST")
@@ -31,8 +32,13 @@ func AddRoutes(r *mux.Router, service *services.DBService) {
 	authRoute := r.PathPrefix("/auth").Subrouter()
 	authRoute.Use(RequireUserMiddleware)
 	authRoute.HandleFunc("/me", userService.Me).Methods("GET")
+
 	authRoute.HandleFunc("/drugs", drugsService.Drugs).Methods("GET")
 	authRoute.HandleFunc("/drugs/add", drugsService.AddDrug).Methods("POST")
+
+	authRoute.HandleFunc("/documents", documentsService.Documents).Methods("GET")
+	authRoute.HandleFunc("/documents/add", documentsService.AddDocument).Methods("POST")
+
 	authRoute.HandleFunc("/me", userService.UpdateMe).Methods("POST")
 	authRoute.HandleFunc("/chats", chatService.GetUsersChats).Methods("GET")
 	authRoute.HandleFunc("/new_chat", chatService.NewChat).Methods("POST")
